fixes alignment in mobile view

--- a/scss/access.scss
+++ b/scss/access.scss
@@ -87,6 +87,8 @@ main {
     .resource-group {
         display: flex;
         flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
         .resource-box {
             cursor: pointer;
             display: flex;
